2003-01-21  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNodeReader.cs : several fix to get more compatible with MS.NET.

2003-01-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNamespaceManager.cs : fundamental change of LookupPrefix to return
		null when no matching uri.
	* XmlElement.cs : removed unnecessary xmlns output.
	* XmlNode.cs : GetPrefixOfNamespace fix along with the change above.
	* XmlTextWriter.cs : LookupPrefix and WriteStartElementInternal fix 
		along with the change above, and moved timing of 'xmlns' output 
		to CloseStartElement.
	* XmlWriter.cs: modified WriteStartAttribute, same as yesterday.

2003-01-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlWriter.cs: modified WriteStartElement (see test for detail).
	Added WriteNode.

2003-01-13  Ville Palo <vi64pa@koti.soon.fi>

	* XmlDocument.cs: Added CheckName () method to check names validity.
	
2003-01-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XmlTextReader.cs:
	(ReadOuterXml): use Depth property which return elementDepth, not depth.

2003-01-11  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlElement.cs : (by ville) XmlElement.set_InnerText event bugfix.
	* XmlTextReader.cs : some fix for ReadOuterXml().

2003-01-08  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlTextReader.cs : bugfix for attributes related to creation of 
	  XmlAttribute *node*.

2003-01-08  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlTextReader.cs : bugfix for attribute values which have entity
	  references.

2002-12-28  Ville Palo <vi64pa@koti.soon.fi>

	* XmlDocument.cs: XmlTextWriter.Formatting == Indented when 
	calling Save () -methods.
	
2002-12-28  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNodeReader.cs : primitive reading implementation.

2002-12-28  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlElement.cs : quick fix for the incomplete patch of #35308 below.

2002-12-28  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : removed inconsistent line-feed output.