@@ -1,3 +1,8 @@
+2003-01-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* System.Xml/XmlTextWriter.cs: throw an exception if WriteEndDocument is
+	called without a prior call to WriteStartDocument.
+
 2003-01-21  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
 
 	* XmlNodeReader.cs : several fix to get more compatible with MS.NET.
